--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,13 @@
 			crossorigin
 		/>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&family=Saira:wght@700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500;600;700&family=Poppins:wght@200;300;400;500;600;700;800;900&family=Saira:wght@700&display=swap"
 			rel="stylesheet"
 		/>
 		<style>
 			* {
 				padding: 0;
 				margin: 0;
-				font-family: "Poppins", sans-serif;
-				font-family: "Saira", sans-serif;
 			}
 		</style>
 
