--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link
+			rel="icon"
+			href="%PUBLIC_URL%/favicon.ico"
+		/>
+
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1"
